--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-   "name": "YourPostBot5000",
+   "name": "YourPostBot",
    "version": "1.0.0",
    "description": "very early project.",
    "scripts": {
-     "lite": "lite-server --port 10001 --baseDir=\"./src\"",
-     "start": "npm run lite"
+     "dev": "webpack -d --watch",
+     "build" : "webpack -p",
+     "start": "webpack-dev-server --watch-poll"
    },
    "author": "",
    "license": "ISC",
    "devDependencies": {
-     "lite-server": "^1.3.1"
+     "webpack": "~2.5.1",
+     "webpack-dev-server": "~2.4.5",
+     "babel-core": "~6.24.1",
+     "babel-loader": "~7.0.0",
+     "babel-preset-es2015": "~6.24.1",
+     "babel-preset-es2016": "~6.24.1",
+     "babel-preset-react": "~6.24.1",
+     "react": "~15.0.0",
+     "react-dom": "~15.0.0",
+     "react-router": "~1.0.3",
+     "history": "~1.17.0",
+     "styled-components" : "~1.0.0"
    }
 }
