--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "YourPostBot",
+   "name": "YourPostBot-test",
    "version": "1.0.0",
    "description": "very early project.",
    "scripts": {
